# mtg-player

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  VCAM_OPTIONS.md  VCAM_PLAN.md  sample_deck.txt  test-deck.txt
.github/workflows/: release.yml
src/: card.cpp  card.hpp  card_requester.cpp  card_requester.hpp  clay_sfml_renderer.hpp  game_action.cpp  game_action.hpp  game_state.cpp  game_state.hpp  hand_window.cpp  hand_window.hpp  hand_window_layout.cpp  main.cpp  pile_viewer.cpp  pile_viewer.hpp  playmat_defs.hpp  playmat_draw.cpp  playmat_menus.cpp  playmat_tick.cpp  playmat_window.cpp  playmat_window.hpp  ui.cpp  ui.hpp  vcam_wrapper.hpp  window_utils.hpp  zone.cpp  zone.hpp
src/vcam/: vcam.hpp  vcam_ffmpeg.cpp  vcam_ffmpeg.hpp  vcam_shared_mem.hpp  vcam_win32.cpp  vcam_win32.hpp
src/vcam/win32_source/: dllmain.cpp  guids.hpp  media_source.cpp  media_source.hpp  media_stream.cpp  media_stream.hpp  vcam_source.def
